# direct_stiffness

./: pyproject.toml
experiments/: Assignment_1_system.py
src/direct_stiffness/: __init__.py  beam.py  cross_section.py  system.py  utils.py
